--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
+    "seed": "knex seed:run",
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent"
   },
   "repository": {
@@ -11,12 +16,16 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "cross-env": "7.0.3",
+    "cross-env": "^7.0.3",
     "eslint": "8.14.0",
     "jest": "28.1.0",
     "supertest": "6.2.3"
   },
   "dependencies": {
-    "sqlite3": "^5.0.8"
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
+    "knex": "^3.1.0",
+    "nodemon": "^3.1.9",
+    "sqlite3": "^5.1.7"
   }
 }
